<resources>
    <string name="app_name">TopTalProperty</string>

    <string name="app_full_name">TopTal\nProperty</string>
    <string name="log_in_action">Log In</string>
    <string name="sign_up_action">Sign Up</string>
    <string name="sign_out_action">Sign Out</string>
    <string name="register_action">Register</string>
    <string name="email_label">E-Mail</string>
    <string name="user_name_label">User Name</string>
    <string name="password_label">Password</string>
    <string name="reenter_password_label">Re-enter Password</string>
    <string name="property_list_title">TopTal Property</string>
    <string name="open_filter_drawer_content_description">Open filter preferences</string>
    <string name="list_tab">List</string>
    <string name="map_tab">Map</string>
    <string name="users_tab">Users</string>
    <string name="required_field_error">Required field</string>
    <string name="different_password_error">The password is different</string>
    <string name="apartment_editor_title">Apartment</string>
    <string name="user_editor_title">User</string>
    <string name="user_role_title">User Role</string>
    <string name="register_new_user">Register New User</string>

    <string name="name_label">Name</string>
    <string name="description_label">Description</string>
    <string name="area_label">Floor Area (sqft)</string>
    <string name="price_label">Price per month (SGD)</string>
    <string name="rooms_label">Number of Rooms</string>
    <string name="address_label">Address</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="save_action">Save</string>
    <string name="delete_action">Delete</string>
    <string name="save_successful_toast">Saved successfully</string>
    <string name="remove_successful_toast">Deleted successfully</string>
    <string name="rented_label">Rented</string>
    <string name="view_on_map_action">View on map</string>
    <string name="min_hint">Min</string>
    <string name="max_hint">Max</string>
    <string name="apply_filter_action">Apply Filter</string>

    <string name="admin_role_name">Administrator</string>
    <string name="realtor_role_name">Realtor</string>
    <string name="customer_role_name">Customer</string>

    <string name="realtor_name_format_string">Realtor: %s</string>
    <string name="area_format_string">%s sqft</string>
    <string name="rooms_format_string">%s BDR</string>
    <string name="price_format_string">$%s SGD</string>
    <string name="marker_snippet_format_string">realtor: %s\n%s\narea: %s sqrt\nrooms: %s BDR\nprice: %s SGD</string>

    <string name="google_map_api_key">AIzaSyAJdWDv-YCFY25ooxgasIf36PabYxz-L-E</string>
</resources>