<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/ic_logo"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="72dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/app_full_name"
        style="@style/Text.H1"
        android:textColor="@color/colorAccent"
        android:gravity="center_horizontal"
        />

    <TextView
        style="@style/Button.MainCta.White"
        android:id="@+id/login_button"
        android:layout_width="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/log_in_action"
        />

    <TextView
        style="@style/Button.SecondCta.White"
        android:id="@+id/sign_up_button"
        android:layout_width="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="50dp"
        android:text="@string/sign_up_action"
        />

</LinearLayout>