<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
        style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/user_editor_title"
            app:titleTextColor="@color/blue_01"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/realtor_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_role_title"
                style="@style/Text.Title1"
                android:textColor="@color/blue_01"
                />

            <RadioGroup
                android:id="@+id/user_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="start"
                android:layout_marginTop="8dp"
                >

                <RadioButton
                    android:id="@+id/realtor_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/realtor_role_name"
                    android:checked="true"
                    android:buttonTint="@color/blue_01"
                    android:layout_margin="4dp"
                    />

                <RadioButton
                    android:id="@+id/customer_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_role_name"
                    android:buttonTint="@color/blue_01"
                    android:layout_margin="4dp"
                    />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:errorEnabled="true"
                android:hint="@string/name_label"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_editor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:errorEnabled="true"
                android:hint="@string/email_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_editor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/password_label"
                android:layout_gravity="center_horizontal"
                app:errorEnabled="true"
                android:visibility="gone"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password2_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/reenter_password_label"
                android:layout_gravity="center_horizontal"
                app:errorEnabled="true"
                android:visibility="gone"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password2_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

               <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:id="@+id/delete_button"
                    android:layout_width="0dp"
                   android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_action"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="8dp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/save_button"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/save_action"
                    android:layout_marginTop="36dp"
                    android:layout_marginStart="8dp"
                    />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
