<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
        style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/apartment_editor_title"
            app:titleTextColor="@color/blue_01"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >


        <TextView
            android:id="@+id/realtor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/full_names"
            style="@style/Text.Label.NoCaps"
            android:textColor="@color/blue_01"
            android:visibility="gone"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/rented_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:useMaterialThemeColors="false"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/realtor_name"
            android:text="@string/rented_label"
            style="@style/Text.Label"
            app:thumbTint="@color/thumb_color"
            app:trackTint="@color/blue_light"
            android:textColor="@color/blue_01"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/rented_switch"
            app:errorEnabled="true"
            android:hint="@string/name_label"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:id="@+id/description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/name_layout"
            app:errorEnabled="true"
            android:hint="@string/description_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description_editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:id="@+id/area_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/description_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rooms_layout"
            android:layout_marginEnd="4dp"
            app:errorEnabled="true"
            android:hint="@string/area_label"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/area_editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:id="@+id/rooms_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toBottomOf="@+id/description_layout"
            app:layout_constraintStart_toEndOf="@+id/area_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:errorEnabled="true"
            android:hint="@string/rooms_label"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rooms_editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:id="@+id/price_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/area_layout"
            app:errorEnabled="true"
            android:hint="@string/price_label"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:id="@+id/address_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/price_layout"
            app:errorEnabled="true"
            android:hint="@string/address_label"
            app:endIconDrawable="@drawable/ic_search_24px"
            app:endIconMode="custom"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address_editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:id="@+id/latitude_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/address_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/longitude_layout"
            android:layout_marginEnd="4dp"
            app:errorEnabled="true"
            android:hint="@string/latitude_label"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/latitude_editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:id="@+id/longitude_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            app:layout_constraintTop_toBottomOf="@+id/address_layout"
            app:layout_constraintStart_toEndOf="@+id/latitude_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:errorEnabled="true"
            android:hint="@string/longitude_label"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/longitude_editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_action"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
